-
Bug
-
Resolution: Done
-
P1: Critical
-
5.13.0 Beta3
-
None
-
Linux x86_64
-
-
1aba2b28920229aa547470a6c3f3b443d7da6b3a (qt/qtwayland/5.13)
The Plasma screen locker crashes on Wayland with 5.13.0 beta 3 (and current 5.13 HEAD). Bisected to https://github.com/qt/qtwayland/commit/15b3afd621a5c0e8d1dd1cd9d5ae816e15aa4a1a
Program terminated with signal SIGSEGV, Segmentation fault.
#0 QMap<QtWaylandClient::QWaylandCursorTheme::WaylandCursor, wl_cursor*>::value (adefaultValue=<optimized out>,
akey=@0x7ffc221da65c: QtWaylandClient::QWaylandCursorTheme::ArrowCursor, this=0x8) at /usr/include/qt/QtCore/qmap.h:656
656 Q_INLINE_TEMPLATE const T QMap<Key, T>::value(const Key &akey, const T &adefaultValue) const
[Current thread is 1 (Thread 0x7fcc1e4e0800 (LWP 1787))]
(gdb) bt
#0 QMap<QtWaylandClient::QWaylandCursorTheme::WaylandCursor, wl_cursor*>::value (adefaultValue=<optimized out>,
akey=@0x7ffc221da65c: QtWaylandClient::QWaylandCursorTheme::ArrowCursor, this=0x8) at /usr/include/qt/QtCore/qmap.h:656
#1 QtWaylandClient::QWaylandCursorTheme::requestCursor (this=0x0, shape=QtWaylandClient::QWaylandCursorTheme::ArrowCursor)
at /build/qt5-wayland/src/qtwayland-everywhere-src-5.13.0-beta3/src/client/qwaylandcursor.cpp:75
#2 0x00007fcc1de7f554 in QtWaylandClient::QWaylandCursorTheme::cursorImage (this=<optimized out>, shape=shape@entry=Qt::ArrowCursor)
at /build/qt5-wayland/src/qtwayland-everywhere-src-5.13.0-beta3/src/client/qwaylandcursor.cpp:217
#3 0x00007fcc1de424dd in QtWaylandClient::QWaylandInputDevice::Pointer::updateCursorTheme (this=this@entry=0x564713d715f0)
at /build/qt5-wayland/src/qtwayland-everywhere-src-5.13.0-beta3/src/client/qwaylandinputdevice.cpp:263
#4 0x00007fcc1de44ec9 in QtWaylandClient::QWaylandInputDevice::Pointer::updateCursor (this=this@entry=0x564713d715f0)
at /build/qt5-wayland/src/qtwayland-everywhere-src-5.13.0-beta3/src/client/qwaylandinputdevice.cpp:299
#5 0x00007fcc1de458b5 in QtWaylandClient::QWaylandInputDevice::Pointer::pointer_enter (this=0x564713d715f0, serial=347, surface=<optimized out>,
sx=<optimized out>, sy=29184) at /build/qt5-wayland/src/qtwayland-everywhere-src-5.13.0-beta3/src/client/qwaylandinputdevice.cpp:553
#6 0x00007fcc1de8703f in QtWayland::wl_pointer::handle_enter (data=<optimized out>, object=<optimized out>, serial=<optimized out>,
surface=<optimized out>, surface_x=<optimized out>, surface_y=<optimized out>) at qwayland-wayland.cpp:1509
#7 0x00007fcc221fd6d0 in ffi_call_unix64 () from /usr/lib/libffi.so.6
#8 0x00007fcc221fd0a0 in ffi_call () from /usr/lib/libffi.so.6
#9 0x00007fcc246c6f8f in ?? () from /usr/lib/libwayland-client.so.0
#10 0x00007fcc246c36ba in ?? () from /usr/lib/libwayland-client.so.0
#11 0x00007fcc246c4bfc in wl_display_dispatch_queue_pending () from /usr/lib/libwayland-client.so.0
#12 0x00007fcc1de49ca2 in QtWaylandClient::QWaylandDisplay::flushRequests (this=0x564713d6de50)
at /build/qt5-wayland/src/qtwayland-everywhere-src-5.13.0-beta3/src/client/qwaylanddisplay.cpp:193
#13 0x00007fcc1de89986 in QtWaylandClient::QWaylandDisplay::qt_static_metacall (_o=<optimized out>, _c=<optimized out>, _id=<optimized out>,
_a=<optimized out>) at .moc/moc_qwaylanddisplay_p.cpp:77
#14 0x00007fcc230af4b7 in QMetaObject::activate(QObject*, int, int, void**) () from /usr/lib/libQt5Core.so.5
#15 0x00007fcc230d9c21 in QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/libQt5Core.so.5
#16 0x00007fcc1debe290 in QPAEventDispatcherGlib::processEvents (this=<optimized out>, flags=...) at qeventdispatcher_glib.cpp:120
#17 0x00007fcc2308317c in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/libQt5Core.so.5
#18 0x00007fcc2308b3e6 in QCoreApplication::exec() () from /usr/lib/libQt5Core.so.5
#19 0x00005647138b2881 in ?? ()
#20 0x00007fcc22acbce3 in __libc_start_main () from /usr/lib/libc.so.6
#21 0x00005647138b2b6e in _start ()
For Gerrit Dashboard: QTBUG-75920 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
262349,2 | Client: Don't crash when the cursor theme fails to load | 5.13.0 | qt/qtwayland | Status: MERGED | +2 | 0 |